Fixed incorrect page alignment of content

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -449,7 +449,7 @@ body {
             display: flex;
             flex-wrap: wrap;
             flex-direction: row;
-            align-items: center;
+            align-items: flex-start;
             justify-content: space-between;
             gap: 2rem;
 
